--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-tagcloud": "^1.2.0",
+    "react-tree-graph": "^1.7.2",
     "redux": "^3.6.0",
     "redux-devtools": "^3.4.0",
     "redux-saga": "^0.14.7",
