--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "history": "^4.6.3",
     "react": "^15.5.5",
     "react-dom": "^15.4.2",
+    "react-graph-vis": "^0.1.2",
     "react-redux": "^4.0.2",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
